CIV.Ccs/gen/CcsParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from CcsParser.g4 by ANTLR 4.7

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace CIV.Ccs {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7")]
[System.CLSCompliant(false)]
public partial class CcsParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		TERM=1, NIL=2, COMMA=3, DIV=4, DEF=5, PAR=6, PREFIX=7, CHOICE=8, TAU=9, 
		LBRACE=10, RBRACE=11, MUL=12, SETDEF=13, LPAREN=14, RPAREN=15, LBRACK=16, 
		RBRACK=17, T__1=18, COACTION=19, ACTION=20, COMMENT=21, IDENTIFIER=22, 
		WHITESPACE=23;
	public const int
		RULE_program = 0, RULE_line = 1, RULE_statement = 2, RULE_comment = 3, 
		RULE_procDef = 4, RULE_setDef = 5, RULE_process = 6, RULE_label = 7, RULE_pid = 8, 
		RULE_relabelExpression = 9, RULE_relabelList = 10, RULE_relabel = 11, 
		RULE_setVar = 12, RULE_setId = 13, RULE_setExpression = 14, RULE_setList = 15, 
		RULE_action = 16, RULE_nonTauAction = 17;
	public static readonly string[] ruleNames = {
		"program", "line", "statement", "comment", "procDef", "setDef", "process", 
		"label", "pid", "relabelExpression", "relabelList", "relabel", "setVar", 
		"setId", "setExpression", "setList", "action", "nonTauAction"
	};

	private static readonly string[] _LiteralNames = {
		null, "';'", "'0'", "','", "'/'", "'='", "'|'", "'.'", "'+'", "'tau'", 
		"'{'", "'}'", "'*'", "'set '", "'('", "')'", "'['", "']'", "'\\'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "TERM", "NIL", "COMMA", "DIV", "DEF", "PAR", "PREFIX", "CHOICE", 
		"TAU", "LBRACE", "RBRACE", "MUL", "SETDEF", "LPAREN", "RPAREN", "LBRACK", 
		"RBRACK", null, "COACTION", "ACTION", "COMMENT", "IDENTIFIER", "WHITESPACE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "CcsParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static CcsParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public CcsParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public CcsParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}
	public partial class ProgramContext : ParserRuleContext {
		public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 39;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << SETDEF) | (1L << COMMENT) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				State = 36; line();
				}
				}
				State = 41;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LineContext : ParserRuleContext {
		public StatementContext statement() {
			return GetRuleContext<StatementContext>(0);
		}
		public CommentContext comment() {
			return GetRuleContext<CommentContext>(0);
		}
		public LineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_line; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.EnterLine(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.ExitLine(this);
		}
	}

	[RuleVersion(0)]
	public LineContext line() {
		LineContext _localctx = new LineContext(Context, State);
		EnterRule(_localctx, 2, RULE_line);
		try {
			State = 44;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case SETDEF:
			case IDENTIFIER:
				EnterOuterAlt(_localctx, 1);
				{
				State = 42; statement();
				}
				break;
			case COMMENT:
				EnterOuterAlt(_localctx, 2);
				{
				State = 43; comment();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public ProcDefContext procDef() {
			return GetRuleContext<ProcDefContext>(0);
		}
		public SetDefContext setDef() {
			return GetRuleContext<SetDefContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.EnterStatement(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.ExitStatement(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 4, RULE_statement);
		try {
			State = 48;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case IDENTIFIER:
				EnterOuterAlt(_localctx, 1);
				{
				State = 46; procDef();
				}
				break;
			case SETDEF:
				EnterOuterAlt(_localctx, 2);
				{
				State = 47; setDef();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CommentContext : ParserRuleContext {
		public ITerminalNode COMMENT() { return GetToken(CcsParser.COMMENT, 0); }
		public CommentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_comment; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.EnterComment(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.ExitComment(this);
		}
	}

	[RuleVersion(0)]
	public CommentContext comment() {
		CommentContext _localctx = new CommentContext(Context, State);
		EnterRule(_localctx, 6, RULE_comment);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 50; Match(COMMENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ProcDefContext : ParserRuleContext {
		public ITerminalNode IDENTIFIER() { return GetToken(CcsParser.IDENTIFIER, 0); }
		public ITerminalNode DEF() { return GetToken(CcsParser.DEF, 0); }
		public ProcessContext process() {
			return GetRuleContext<ProcessContext>(0);
		}
		public ITerminalNode TERM() { return GetToken(CcsParser.TERM, 0); }
		public ProcDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_procDef; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.EnterProcDef(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.ExitProcDef(this);
		}
	}

	[RuleVersion(0)]
	public ProcDefContext procDef() {
		ProcDefContext _localctx = new ProcDefContext(Context, State);
		EnterRule(_localctx, 8, RULE_procDef);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 52; Match(IDENTIFIER);
			State = 53; Match(DEF);
			State = 54; process(0);
			State = 55; Match(TERM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class SetDefContext : ParserRuleContext {
		public ITerminalNode SETDEF() { return GetToken(CcsParser.SETDEF, 0); }
		public ITerminalNode IDENTIFIER() { return GetToken(CcsParser.IDENTIFIER, 0); }
		public ITerminalNode DEF() { return GetToken(CcsParser.DEF, 0); }
		public SetExpressionContext setExpression() {
			return GetRuleContext<SetExpressionContext>(0);
		}
		public ITerminalNode TERM() { return GetToken(CcsParser.TERM, 0); }
		public SetDefContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_setDef; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.EnterSetDef(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.ExitSetDef(this);
		}
	}

	[RuleVersion(0)]
	public SetDefContext setDef() {
		SetDefContext _localctx = new SetDefContext(Context, State);
		EnterRule(_localctx, 10, RULE_setDef);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 57; Match(SETDEF);
			State = 58; Match(IDENTIFIER);
			State = 59; Match(DEF);
			State = 60; setExpression();
			State = 61; Match(TERM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ProcessContext : ParserRuleContext {
		public ProcessContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_process; } }
	 
		public ProcessContext() { }
		public virtual void CopyFrom(ProcessContext context) {
			base.CopyFrom(context);
		}
	}
	public partial class RelabelProcContext : ProcessContext {
		public ProcessContext process() {
			return GetRuleContext<ProcessContext>(0);
		}
		public RelabelExpressionContext relabelExpression() {
			return GetRuleContext<RelabelExpressionContext>(0);
		}
		public RelabelProcContext(ProcessContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.EnterRelabelProc(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.ExitRelabelProc(this);
		}
	}
	public partial class PrefixProcContext : ProcessContext {
		public LabelContext label() {
			return GetRuleContext<LabelContext>(0);
		}
		public ITerminalNode PREFIX() { return GetToken(CcsParser.PREFIX, 0); }
		public ProcessContext process() {
			return GetRuleContext<ProcessContext>(0);
		}
		public PrefixProcContext(ProcessContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.EnterPrefixProc(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.ExitPrefixProc(this);
		}
	}
	public partial class RestrictIdProcContext : ProcessContext {
		public ProcessContext process() {
			return GetRuleContext<ProcessContext>(0);
		}
		public ITerminalNode T__1() { return GetToken(CcsParser.T__1, 0); }
		public SetIdContext setId() {
			return GetRuleContext<SetIdContext>(0);
		}
		public RestrictIdProcContext(ProcessContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.EnterRestrictIdProc(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.ExitRestrictIdProc(this);
		}
	}
	public partial class ParenthProcContext : ProcessContext {
		public ITerminalNode LPAREN() { return GetToken(CcsParser.LPAREN, 0); }
		public ProcessContext process() {
			return GetRuleContext<ProcessContext>(0);
		}
		public ITerminalNode RPAREN() { return GetToken(CcsParser.RPAREN, 0); }
		public ParenthProcContext(ProcessContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.EnterParenthProc(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.ExitParenthProc(this);
		}
	}
	public partial class NilProcContext : ProcessContext {
		public ITerminalNode NIL() { return GetToken(CcsParser.NIL, 0); }
		public NilProcContext(ProcessContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.EnterNilProc(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.ExitNilProc(this);
		}
	}
	public partial class RestrictExprProcContext : ProcessContext {
		public ProcessContext process() {
			return GetRuleContext<ProcessContext>(0);
		}
		public ITerminalNode T__1() { return GetToken(CcsParser.T__1, 0); }
		public SetExpressionContext setExpression() {
			return GetRuleContext<SetExpressionContext>(0);
		}
		public RestrictExprProcContext(ProcessContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.EnterRestrictExprProc(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.ExitRestrictExprProc(this);
		}
	}
	public partial class ParProcContext : ProcessContext {
		public ProcessContext[] process() {
			return GetRuleContexts<ProcessContext>();
		}
		public ProcessContext process(int i) {
			return GetRuleContext<ProcessContext>(i);
		}
		public ITerminalNode PAR() { return GetToken(CcsParser.PAR, 0); }
		public ParProcContext(ProcessContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.EnterParProc(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.ExitParProc(this);
		}
	}
	public partial class ChoiceProcContext : ProcessContext {
		public ProcessContext[] process() {
			return GetRuleContexts<ProcessContext>();
		}
		public ProcessContext process(int i) {
			return GetRuleContext<ProcessContext>(i);
		}
		public ITerminalNode CHOICE() { return GetToken(CcsParser.CHOICE, 0); }
		public ChoiceProcContext(ProcessContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.EnterChoiceProc(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.ExitChoiceProc(this);
		}
	}
	public partial class PidProcContext : ProcessContext {
		public PidContext pid() {
			return GetRuleContext<PidContext>(0);
		}
		public PidProcContext(ProcessContext context) { CopyFrom(context); }
		public override void EnterRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.EnterPidProc(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.ExitPidProc(this);
		}
	}

	[RuleVersion(0)]
	public ProcessContext process() {
		return process(0);
	}

	private ProcessContext process(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		ProcessContext _localctx = new ProcessContext(Context, _parentState);
		ProcessContext _prevctx = _localctx;
		int _startState = 12;
		EnterRecursionRule(_localctx, 12, RULE_process, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 74;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case LPAREN:
				{
				_localctx = new ParenthProcContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;

				State = 64; Match(LPAREN);
				State = 65; process(0);
				State = 66; Match(RPAREN);
				}
				break;
			case TAU:
			case COACTION:
			case ACTION:
				{
				_localctx = new PrefixProcContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 68; label();
				State = 69; Match(PREFIX);
				State = 70; process(5);
				}
				break;
			case IDENTIFIER:
				{
				_localctx = new PidProcContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 72; pid();
				}
				break;
			case NIL:
				{
				_localctx = new NilProcContext(_localctx);
				Context = _localctx;
				_prevctx = _localctx;
				State = 73; Match(NIL);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			Context.Stop = TokenStream.LT(-1);
			State = 92;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					State = 90;
					ErrorHandler.Sync(this);
					switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
					case 1:
						{
						_localctx = new ParProcContext(new ProcessContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_process);
						State = 76;
						if (!(Precpred(Context, 4))) throw new FailedPredicateException(this, "Precpred(Context, 4)");
						State = 77; Match(PAR);
						State = 78; process(5);
						}
						break;
					case 2:
						{
						_localctx = new ChoiceProcContext(new ProcessContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_process);
						State = 79;
						if (!(Precpred(Context, 3))) throw new FailedPredicateException(this, "Precpred(Context, 3)");
						State = 80; Match(CHOICE);
						State = 81; process(4);
						}
						break;
					case 3:
						{
						_localctx = new RelabelProcContext(new ProcessContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_process);
						State = 82;
						if (!(Precpred(Context, 8))) throw new FailedPredicateException(this, "Precpred(Context, 8)");
						State = 83; relabelExpression();
						}
						break;
					case 4:
						{
						_localctx = new RestrictIdProcContext(new ProcessContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_process);
						State = 84;
						if (!(Precpred(Context, 7))) throw new FailedPredicateException(this, "Precpred(Context, 7)");
						State = 85; Match(T__1);
						State = 86; setId();
						}
						break;
					case 5:
						{
						_localctx = new RestrictExprProcContext(new ProcessContext(_parentctx, _parentState));
						PushNewRecursionContext(_localctx, _startState, RULE_process);
						State = 87;
						if (!(Precpred(Context, 6))) throw new FailedPredicateException(this, "Precpred(Context, 6)");
						State = 88; Match(T__1);
						State = 89; setExpression();
						}
						break;
					}
					} 
				}
				State = 94;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,5,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class LabelContext : ParserRuleContext {
		public ITerminalNode TAU() { return GetToken(CcsParser.TAU, 0); }
		public ITerminalNode ACTION() { return GetToken(CcsParser.ACTION, 0); }
		public ITerminalNode COACTION() { return GetToken(CcsParser.COACTION, 0); }
		public LabelContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_label; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.EnterLabel(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.ExitLabel(this);
		}
	}

	[RuleVersion(0)]
	public LabelContext label() {
		LabelContext _localctx = new LabelContext(Context, State);
		EnterRule(_localctx, 14, RULE_label);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 95;
			_la = TokenStream.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << TAU) | (1L << COACTION) | (1L << ACTION))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PidContext : ParserRuleContext {
		public ITerminalNode IDENTIFIER() { return GetToken(CcsParser.IDENTIFIER, 0); }
		public PidContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pid; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.EnterPid(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.ExitPid(this);
		}
	}

	[RuleVersion(0)]
	public PidContext pid() {
		PidContext _localctx = new PidContext(Context, State);
		EnterRule(_localctx, 16, RULE_pid);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 97; Match(IDENTIFIER);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RelabelExpressionContext : ParserRuleContext {
		public ITerminalNode LBRACK() { return GetToken(CcsParser.LBRACK, 0); }
		public RelabelListContext relabelList() {
			return GetRuleContext<RelabelListContext>(0);
		}
		public ITerminalNode RBRACK() { return GetToken(CcsParser.RBRACK, 0); }
		public RelabelExpressionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_relabelExpression; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.EnterRelabelExpression(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.ExitRelabelExpression(this);
		}
	}

	[RuleVersion(0)]
	public RelabelExpressionContext relabelExpression() {
		RelabelExpressionContext _localctx = new RelabelExpressionContext(Context, State);
		EnterRule(_localctx, 18, RULE_relabelExpression);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 99; Match(LBRACK);
			State = 100; relabelList(0);
			State = 101; Match(RBRACK);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class RelabelListContext : ParserRuleContext {
		public RelabelContext relabel() {
			return GetRuleContext<RelabelContext>(0);
		}
		public RelabelListContext relabelList() {
			return GetRuleContext<RelabelListContext>(0);
		}
		public ITerminalNode COMMA() { return GetToken(CcsParser.COMMA, 0); }
		public RelabelListContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_relabelList; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.EnterRelabelList(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.ExitRelabelList(this);
		}
	}

	[RuleVersion(0)]
	public RelabelListContext relabelList() {
		return relabelList(0);
	}

	private RelabelListContext relabelList(int _p) {
		ParserRuleContext _parentctx = Context;
		int _parentState = State;
		RelabelListContext _localctx = new RelabelListContext(Context, _parentState);
		RelabelListContext _prevctx = _localctx;
		int _startState = 20;
		EnterRecursionRule(_localctx, 20, RULE_relabelList, _p);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			{
			State = 104; relabel();
			}
			Context.Stop = TokenStream.LT(-1);
			State = 111;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,6,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( ParseListeners!=null )
						TriggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new RelabelListContext(_parentctx, _parentState);
					PushNewRecursionContext(_localctx, _startState, RULE_relabelList);
					State = 106;
					if (!(Precpred(Context, 1))) throw new FailedPredicateException(this, "Precpred(Context, 1)");
					State = 107; Match(COMMA);
					State = 108; relabel();
					}
					} 
				}
				State = 113;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,6,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			UnrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public partial class RelabelContext : ParserRuleContext {
		public ActionContext action() {
			return GetRuleContext<ActionContext>(0);
		}
		public ITerminalNode DIV() { return GetToken(CcsParser.DIV, 0); }
		public NonTauActionContext nonTauAction() {
			return GetRuleContext<NonTauActionContext>(0);
		}
		public RelabelContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_relabel; } }
		public override void EnterRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.EnterRelabel(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			ICcsParserListener typedListener = listener as ICcsParserListener;
			if (typedListener != null) typedListener.ExitRelabel(this);
		}
	}

	[RuleVersion(0)]
	public RelabelContext relabel() {
		RelabelContext _localctx = new RelabelContext(Context, State);
		EnterRule(_localctx, 22, RULE_relabel);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 114; action();
			State = 115; Match(DIV);
			State = 116; nonTauAction();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
